[gd_scene load_steps=2 format=3 uid="uid://ytsxet2k47lj"]

[ext_resource type="Script" path="res://ag_user_settings/ag_user_settings_ui.gd" id="1_dj8tw"]

[node name="UserSettingsUI" type="TabContainer"]
offset_right = 300.0
offset_bottom = 159.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
tab_alignment = 1
current_tab = 0
script = ExtResource("1_dj8tw")

[node name="Input" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_tab_index = 0

[node name="InputVBox" type="VBoxContainer" parent="Input"]
layout_mode = 2

[node name="SnapTurning" type="HBoxContainer" parent="Input/InputVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/InputVBox/SnapTurning"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Snap turning:"

[node name="SnapTurningCB" type="CheckBox" parent="Input/InputVBox/SnapTurning"]
layout_mode = 2

[node name="yAxisDeadZone" type="HBoxContainer" parent="Input/InputVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/InputVBox/yAxisDeadZone"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Y axis dead zone"

[node name="yAxisDeadZoneSlider" type="HSlider" parent="Input/InputVBox/yAxisDeadZone"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 0.5
step = 0.01
value = 0.1

[node name="xAxisDeadZone" type="HBoxContainer" parent="Input/InputVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/InputVBox/xAxisDeadZone"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "X axis dead zone"

[node name="xAxisDeadZoneSlider" type="HSlider" parent="Input/InputVBox/xAxisDeadZone"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 0.5
step = 0.01
value = 0.2

[node name="HapticsScale" type="HBoxContainer" parent="Input/InputVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Input/InputVBox/HapticsScale"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Haptics Scale"

[node name="HapticsScaleSlider" type="HSlider" parent="Input/InputVBox/HapticsScale"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator" type="HSeparator" parent="Input/InputVBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Input/InputVBox"]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="Input/InputVBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Save"

[node name="Reset" type="Button" parent="Input/InputVBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Reset"

[node name="Player" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_tab_index = 1

[node name="PlayerVBox" type="VBoxContainer" parent="Player"]
layout_mode = 2

[node name="PlayerHeight" type="HBoxContainer" parent="Player/PlayerVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Player/PlayerVBox/PlayerHeight"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Height adjust:"

[node name="PlayerHeightSlider" type="HSlider" parent="Player/PlayerVBox/PlayerHeight"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 2.5
step = 0.05
value = 1.0

[node name="HSeparator" type="HSeparator" parent="Player/PlayerVBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Player/PlayerVBox"]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="Player/PlayerVBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Save"

[node name="Reset" type="Button" parent="Player/PlayerVBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Reset"

[node name="Options" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_tab_index = 2

[node name="OptionsVBox" type="VBoxContainer" parent="Options"]
layout_mode = 2

[node name="Options" type="HBoxContainer" parent="Options/OptionsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/OptionsVBox/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Play Area Mode:"

[node name="PlayAreaMode" type="OptionButton" parent="Options/OptionsVBox/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
selected = 0
item_count = 2
popup/item_0/text = "ROOMSCALE"
popup/item_1/text = "STATIC"
popup/item_1/id = 1

[node name="HSeparator" type="HSeparator" parent="Options/OptionsVBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Options/OptionsVBox"]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="Options/OptionsVBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Apply"

[node name="Reset" type="Button" parent="Options/OptionsVBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Reset"

[connection signal="pressed" from="Input/InputVBox/SnapTurning/SnapTurningCB" to="." method="_on_SnapTurningCB_pressed"]
[connection signal="value_changed" from="Input/InputVBox/yAxisDeadZone/yAxisDeadZoneSlider" to="." method="_on_y_axis_dead_zone_slider_value_changed"]
[connection signal="value_changed" from="Input/InputVBox/xAxisDeadZone/xAxisDeadZoneSlider" to="." method="_on_x_axis_dead_zone_slider_value_changed"]
[connection signal="value_changed" from="Input/InputVBox/HapticsScale/HapticsScaleSlider" to="." method="_on_haptics_scale_slider_value_changed"]
[connection signal="pressed" from="Input/InputVBox/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Input/InputVBox/Buttons/Reset" to="." method="_on_Reset_pressed"]
[connection signal="drag_ended" from="Player/PlayerVBox/PlayerHeight/PlayerHeightSlider" to="." method="_on_PlayerHeightSlider_drag_ended"]
[connection signal="pressed" from="Player/PlayerVBox/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Player/PlayerVBox/Buttons/Reset" to="." method="_on_Reset_pressed"]
[connection signal="item_selected" from="Options/OptionsVBox/Options/PlayAreaMode" to="." method="_on_play_area_mode_item_selected"]
[connection signal="pressed" from="Options/OptionsVBox/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Options/OptionsVBox/Buttons/Reset" to="." method="_on_Reset_pressed"]
